# GameBackbone

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  GB_BuildVars.txt  LICENSE.txt  README.md  StyleGuide.txt  _animated_sprite_8h_source.html  _animation_8h_source.html  _animation_set_8h_source.html  _backbone_base_exceptions_8h_source.html  _basic_game_region_8h_source.html  _button_gesture_handler_8h_source.html  _compound_sprite_8h_source.html  _core_event_controller_8h_source.html  _debug_includes_8h_source.html  _dll_util_8h_source.html  _event_comparator_8h_source.html  _event_filter_8h_source.html  _game_region_8h_source.html  _gesture_match_signaler_8h_source.html  _input_handler_8h_source.html  _input_recorder_8h_source.html  _input_router_8h_source.html  _rand_gen_8h_source.html  _s_f_util_8h_source.html  _uniform_animation_set_8h_source.html  _updatable_8h_source.html  _util_math_8h_source.html  annotated.html  class_g_b_1_1_animated_sprite-members.html  class_g_b_1_1_animated_sprite.html  class_g_b_1_1_animation-members.html  class_g_b_1_1_animation.html  class_g_b_1_1_animation_set-members.html  class_g_b_1_1_animation_set.html  class_g_b_1_1_any_button_down_event_filter-members.html  class_g_b_1_1_any_button_down_event_filter.html  class_g_b_1_1_any_button_up_event_filter-members.html  (+93 more)
GameBackbone/: AnimatedSprite.cpp  AnimatedSprite.h  AnimationSet.cpp  AnimationSet.h  Array3D.h  CMakeLists.txt  ClassDiagram.cd  CompoundSprite.cpp  CompoundSprite.h  DebugIncludes.h  DllUtil.h  GameBackbone.sln  GameBackbone.vcxproj  GameBackbone.vcxproj.filters  GameBackboneDllCPPCheck.cppcheck  GameRegion.cpp  GameRegion.h  GameWorldAnchor.cpp  GameWorldAnchor.h  GameWorldAnimatedSprite.cpp  GameWorldAnimatedSprite.h  GameWorldCompoundSprite2.cpp  GameWorldCompoundSprite2.h  GameWorldObject.cpp  GameWorldObject.h  GameWorldSprite.cpp  GameWorldSprite.h  MainPage.dox  NavigationGrid.cpp  NavigationGrid.h  NavigationHexData.h  NavigationNode.cpp  NavigationNode.h  PathFinder.cpp  PathFinder.h  PathRequest.h  Point2D.h  SpriteNavigator.cpp  SpriteNavigator.h  Updatable.h  (+2 more)
GameBackbone/Source/Core/: AnimatedSprite.cpp  AnimationSet.cpp  BasicGameRegion.cpp  CompoundSprite.cpp  CoreEventController.cpp  GameRegion.cpp  UniformAnimationSet.cpp
GameBackbone/Source/UserInput/: GestureBind.cpp  GestureBindBuilder.cpp
GameBackbone/Source/Util/: RandGen.cpp  dllmain.cpp
GameBackbone/Win32Project1/: ReadMe.txt  Win32Project1.vcxproj
GameBackboneSln/: .clang-format  CMakeLists.txt  CMakeSettings.json  FindGB.cmake  GB_BuildVars.txt.example  GameBackboneSln.sln  TestInFile.tsv
GameBackboneSln/GameBackbone/: CMakeLists.txt
GameBackboneSln/GameBackboneBoostTests/: GameBackboneBoostTests.vcxproj  GameBackboneBoostTests.vcxproj.filters  MainTest.cpp
GameBackboneSln/GameBackboneBoostUnitTest/: GameBackboneBoostUnitTest.vcxproj  stdafx.cpp
GameBackboneSln/GameBackboneBoostUnitTest1/: AnimatedSpriteTests.cpp  AnimationSetTests.cpp  Array2DTests.cpp  Array3DTests.cpp  BoostUnitTest.cpp  BoostUnitTestSample.cpp  CMakeLists.txt  ClusterTests.cpp  CompoundSpriteTests.cpp  CoreEventControllerTests.cpp  FileReaderTests.cpp  GameBackboneBoostUnitTest1.vcxproj  GameBackboneBoostUnitTest1.vcxproj.filters  GameRegionTests.cpp  MassTest.py  PathFinderTests.cpp  RandGenTests.cpp  UtilMathTests.cpp  stdafx.cpp  stdafx.h
GameBackboneSln/GameBackboneBoostUnitTest1/SourceFiles/: AnimatedSpriteTests.cpp  AnimationSetTests.cpp  Array3DTests.cpp  PathFinderTests.cpp
GameBackboneSln/GameBackboneBoostUnitTest1/TestPlaylists/: Array2D.playlist  Array3D.playlist  Array3D_v2.playlist  Pathfinder.playlist
GameBackboneSln/GameBackboneBoostUnitTest1/source/: AnimatedSpriteTests.cpp  AnimationSetTests.cpp  Array2DTests.cpp  Array3DTests.cpp  CMakeLists.txt  ClusterGreenhouseTests.cpp  ClusterTests.cpp  CompoundSpriteTests.cpp  CoordinateConverterTests.cpp  CoreEventControllerTests.cpp  FileManagerTests.cpp  FileReaderTests.cpp  FileWriterTests.cpp  GameRegionTests.cpp  NavigationToolsTests.cpp  PathFinderTests.cpp  RandGenTests.cpp  UtilMathTests.cpp  stdafx.h  (+2 more)
GameBackboneSln/GameBackboneDemo/: CMakeLists.txt
GameBackboneSln/GameBackboneDll/: AnimatedSprite.cpp  AnimatedSprite.h  AnimationSet.cpp  AnimationSet.h  Array2D.h  Array3D.h  BackboneBaseExceptions.h  CMakeLists.txt  ClassDiagram.cd  Cluster.h  CompoundSprite.cpp  CompoundSprite.h  CoreEventController.cpp  CoreEventController.h  DebugIncludes.h  FileReader.cpp  FileReader.h  GameBackboneDll.h  GameBackboneDll.vcxproj  GameBackboneDll.vcxproj.filters  GameRegion.cpp  GameRegion.h  GameWorldAnchor.cpp  GameWorldAnchor.h  GameWorldAnimatedSprite.h  GameWorldCompoundSprite2.cpp  GameWorldObject.h  GameWorldSprite.h  MainPage.dox  NavigationDemoRegion.cpp  NavigationDemoRegion.h  NavigationGridData.h  NavigationTools.cpp  NavigationTools.h  PathFinder.cpp  PathFinder.h  PathRequest.h  Point.h  RandGen.cpp  RandGen.h  (+4 more)
GameBackboneSln/GameBackboneExe/: BackboneExeCoreEventController.cpp  BackboneExeCoreEventController.h  CMakeLists.txt  GameBackboneExe.vcxproj  GameBackboneExe.vcxproj.filters  ReadMe.txt  SampleGuiInterface.cpp  SampleGuiInterface.h  main.cpp  stdafx.h
GameBackboneSln/GameBackboneLib/: CMakeLists.txt  MainPage.dox
GameBackboneSln/GameBackboneTests/: Array3DTests.cpp  GameBackboneTests.vcxproj  GameBackboneTests.vcxproj.filters  MemoryManagement.h  PathFinderTests.cpp  stdafx.cpp  stdafx.h  unittest1.cpp
GameBackboneSln/GameBackboneUnitTest/: CMakeLists.txt
GameBackboneUnitTest/: CMakeLists.txt
GameBackboneUnitTest/Source/: UniformAnimationSetTests.cpp
Tests/: CMakeLists.txt
Tests/InstallConsumer/: CMakeLists.txt
Tests/Source/: AnimatedSpriteTests.cpp  BasicGameRegionTests.cpp  ButtonGestureHandlerTests.cpp  ButtonPressGestureHandlerTests.cpp  CompoundSpriteTests.cpp  CoreEventControllerTests.cpp  EventComparatorTests.cpp  EventFilterTests.cpp  GameRegionTests.cpp  GestureBindTests.cpp  GestureMatchSignalerTests.cpp  InputHandlerTests.cpp  InputRecorderTests.cpp  InputRouterTests.cpp  RandGenTests.cpp  stdafx.h
(+1033 files in other folders)
